added nillion init with a just-in-time wallet to be funded by a faucet
added chakra styles and python code editor

added backend service - tying into webpage

validated docker service; it might have trouble sharing nodekey if it gets load (and spins up responders)

added feedback on compilation errors; catch webservice errors

organized types; wiring up codeparty action

extract program names from nada

use python web3 instead of foundry cli

tied the metamask wallet to the nillion dynamic wallet

layout and data changes for front page

multi inputs

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "workspaces": {
     "packages": [
+      "packages/backend",
       "packages/hardhat",
       "packages/nextjs",
       "packages/nillion"
