--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -11,30 +11,43 @@
     "format": "prettier --write . '!(node_modules|.next|contracts)/**/*'",
     "check-types": "tsc --noEmit --incremental",
     "vercel": "vercel",
-    "vercel:yolo": "vercel --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true"
+    "vercel:yolo": "vercel --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true",
+    "partykit": "partykit dev --https --https-key-path /opt/certbot/keys/cert.key --https-cert-path /opt/certbot/keys/cert.crt"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@codemirror/lang-python": "^6.1.4",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "@ethersproject/providers": "^5.7.2",
     "@heroicons/react": "^2.0.11",
     "@nillion/nillion-client-js-browser": "^0.1.1",
     "@rainbow-me/rainbowkit": "1.3.5",
+    "@uiw/codemirror-theme-basic": "^4.21.25",
+    "@uiw/codemirror-theme-monokai": "^4.21.25",
+    "@uiw/react-codemirror": "^4.21.24",
     "@uniswap/sdk-core": "^4.0.1",
     "@uniswap/v2-sdk": "^3.0.1",
     "blo": "^1.0.1",
     "daisyui": "4.5.0",
+    "framer-motion": "^11.0.20",
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
+    "partysocket": "1.0.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-syntax-highlighter": "^15.5.0",
+    "unique-names-generator": "^4.7.1",
     "use-debounce": "^8.0.4",
     "usehooks-ts": "^2.13.0",
     "viem": "1.19.9",
     "wagmi": "1.4.12",
+    "web3": "^4.6.0",
     "zustand": "^4.1.2"
   },
   "devDependencies": {
@@ -49,6 +62,7 @@
     "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "partykit": "0.0.101",
     "postcss": "^8.4.16",
     "prettier": "^2.8.4",
     "tailwindcss": "^3.3.3",
