--- a/package.json
+++ b/package.json
@@ -32,7 +32,12 @@
   },
   "packageManager": "yarn@3.2.3",
   "devDependencies": {
+    "@types/react-syntax-highlighter": "^15",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3"
+  },
+  "dependencies": {
+    "@nillion/nillion-client-js-browser": "^0.1.18",
+    "react-syntax-highlighter": "^15.5.0"
   }
 }
