--- a/packages/nillion/package.json
+++ b/packages/nillion/package.json
@@ -3,14 +3,7 @@
   "private": true,
   "version": "0.1.0",
   "scripts": {
-    "nada": "./nada",
-    "nillion": "./nillion",
-    "nilup": "./nilup",
-    "node-key2peerid": "./node-key2peerid",
-    "node-keygen": "./node-keygen",
-    "program-simulator": "./program-simulator",
-    "pynadac": "./pynadac",
-    "run-local-cluster": "sh ./bootstrap-local-env.sh",
-    "user-keygen": "./user-keygen"
+    "nillion": "nillion",
+    "nillion-devnet": "sh ./bootstrap-local-env.sh"
   }
 }
