remove config and reorder commands to run nillion-devnet first

--- a/packages/hardhat/.env.example
+++ b/packages/hardhat/.env.example
@@ -9,3 +9,6 @@
 ALCHEMY_API_KEY=
 DEPLOYER_PRIVATE_KEY=
 ETHERSCAN_API_KEY=
+
+NEXT_PUBLIC_NILLION_BLOCKCHAIN_RPC_ENDPOINT=
+NEXT_PUBLIC_NILLION_WALLET_PRIVATE_KEY=
