(feat) add the .env to hardhat with configurable network

--- a/packages/hardhat/.env.example
+++ b/packages/hardhat/.env.example
@@ -10,5 +10,7 @@ ALCHEMY_API_KEY=
 DEPLOYER_PRIVATE_KEY=
 ETHERSCAN_API_KEY=
 
-NEXT_PUBLIC_NILLION_BLOCKCHAIN_RPC_ENDPOINT=
-NEXT_PUBLIC_NILLION_WALLET_PRIVATE_KEY=
+# Auto populated by yarn nillion-devnet
+NILLION_CONFIG_RPC_URL=
+NILLION_CONFIG_DEPLOYER_PRIVATE_KEY=
+NILLION_CONFIG_CHAIN_ID=
