--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -18,7 +18,7 @@
     "@cosmjs/stargate": "^0.32.3",
     "@ethersproject/providers": "^5.7.2",
     "@heroicons/react": "^2.0.11",
-    "@nillion/client": "/Users/steph/Downloads/nillion-client-0.3.0-release.tgz",
+    "@nillion/client": "file:nillion.tgz",
     "@rainbow-me/rainbowkit": "1.3.5",
     "@uniswap/sdk-core": "^4.0.1",
     "@uniswap/v2-sdk": "^3.0.1",
